# epochdb-server

./: .coverage  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  client.py  docker-compose.yml  pyproject.toml  test_cluster.py
.github/workflows/: docker-publish.yml
docs/: index.md  package-lock.json  package.json
docs/.vitepress/: config.js
docs/api/: index.md
docs/guide/: getting-started.md  routing-metrics.md  sharding-architecture.md  visualization.md  what-is-epochdb.md
examples/: client_example.py
src/: server.py  visualize.html
tests/: test_cluster.py  test_resilience.py  test_server_api.py
